--- a/homepage/homepage.css
+++ b/homepage/homepage.css
@@ -3,7 +3,17 @@ body {
   /*background-image:url('cityskyline.jpg'); */
   background-size: 100% 100%;
 }
-
+div {
+  height: 18px;
+  width: 70%;
+  display: inline-block;
+}
+h1 {
+  color:white;
+  font-family: Oswald;
+  font-size: 25px;
+  text-align: left;
+}
 
 h2 {
   color:white;
@@ -12,9 +22,20 @@ h2 {
   line-height:70px;
   text-align: center;
 }
+
 h3 {
   color:white;
   font-family: Oswald;
   font-size: 36px;
+  line-height: 32px;
   text-align: center;
+}
+
+h4 {
+  color:white;
+  float:right;
+
+  font-size: 16px;
+  display:inline-block;
+  margin-right:10px;
 }
